<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Taskmate</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="login_email">Email</string>
    <string name="email_for_signing_in">email for signing in</string>
    <string name="login_password">Password</string>
    <string name="school_loop_id">School loop ID</string>
    <string name="schoolloop_password">Schoolloop Password</string>
    <string name="schoolloop_login">Schoolloop login</string>
    <string name="school_loop_password">school loop password</string>
    <string name="password">password</string>
    <string name="configChangedone">Done</string>
    <string name="Configdone">Save</string>
    <string name="configcanceltext">Cancel</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="mon_year">Month and Year</string>
    <string name="todo">TODO</string>
    <string name="event_title">Event Title</string>
    <string name="start_time">Start Time</string>
    <string name="event_start_time">event start time</string>
    <string name="duration">Duration</string>
    <string name="repeats">Repeats</string>
    <string name="recurrence">Recurrence</string>
    <string name="activity_name">Name</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="task_hours">Task Hours</string>

    <string name="homework_hours">Time to finish</string>


    <string name="submission_date">Submission date</string>
    <string name="submit_by">Submit by</string>
    <string name="school_task">School Task?</string>
    <string name="schoolloop_sub_domain">hjh-fusd-ca</string>
    <string name="add_to_calendar">Add To Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="notes">Notes</string>
    <string name="textview">TextView</string>
    <string name="new_activity">New Activity</string>
    <string name="saturday">S</string>
    <string name="sunday">Su</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="activity_description">Activity Description</string>
    <string name="time">Time</string>
    <string name="act_end_time">End Time</string>
    <string name="add">Add</string>
    <string name="recurring">Recurring:</string>
    <string name="skip">Skip</string>
    <string name="tell_us_a_bit_about_yourself_so_we_can_help_create_your_schedule">Tell us a bit about yourself, so we can help create your schedule!</string>
    <string name="what_time_is_your_school_at">What time is your school at?</string>
    <string name="when_do_you_have_extracurricular_activities">When do you have extracurricular activities?</string>
    <string name="what_time_do_you_sleep_at">What time do you sleep at?</string>
    <string name="to">to</string>
    <string name="textSpace" />
    <string name="m">M</string>
    <string name="continuebutton">Continue</string>
    <string name="day_of_month">day of month</string>
    <string name="dayofmonth">DayOf</string>
    <string name="event_1">Event 1</string>
    <string name="event_3">Event 3</string>
    <string name="event_2">Event 2</string>
    <string name="what_time_do_you_eat_breakfast">What time do you eat breakfast?</string>
    <string name="dinner">Dinner?</string>
    <string name="lunch">Lunch?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="what_time_do_you_eat_dinner">What time do you eat dinner?</string>
    <string name="start_school_time">Start Time</string>
    <string name="end_school_time">End</string>
    <string name="start_sleep_time">Start Time</string>
    <string name="end_sleep_time">End Time</string>
    <string name="start_dinner_time">Start Time</string>
    <string name="end_dinner_time">End Time</string>
    <string name="_10_00_pm">10:00 PM</string>
    <string name="_6_30_am">6:30 AM</string>
    <string name="_7_30_pm">7:30 PM</string>
    <string name="_6_30_pm">6:30 PM</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="_3_00_pm">3:00 PM</string>
    <string name="preference_file_key">MissionTech</string>
    <string name="desc">Desc</string>
    <string name="next_day">Next Day</string>
    <string name="previous_day">Previous Day</string>
    <string name="school_loop_url_subdomain">School Loop URL</string>
    <string name="school_loop_login">School Loop Login</string>
    <string name="connect_to_your_school_app">Connect to your school app:</string>
    <string-array name="event_duration_times">
        <item>15m</item>
        <item>30m</item>
        <item>45m</item>
        <item>1h</item>
        <item>1h30m</item>
        <item>2h</item>
        <item>3h</item>
        <item>4h</item>
    </string-array>
    <string-array name="event_frequency">
        <item>Never</item>
        <item>Every Week</item>
        <item>Every 2 Weeks</item>
        <item>Every Month</item>
    </string-array>
    <string-array name="hw_hours">
        <item>30m</item>
        <item>1hr</item>
        <item>2h</item>
        <item>4h</item>
        <item>6h</item>
        <item>10h</item>
        <item>20h</item>
    </string-array>


    <string name="minutes">mins</string>
    <string name="max_sitting">Max Sitting</string>
    <string name="ideal_sitting">Ideal Sitting</string>
    <string name="break_notif">Break</string>
    <string name="notifications">Notifications</string>
    <string name="schoolloop_com">.schoolloop.com</string>
    <string name="school_specific_url_part">School specific URL part</string>
    <string name="img_todo">TODO</string>

    <string name="nextbtn">Next</string>
    <string name="title_activity_privacy">Privacy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="end_time">End Time</string>
    <string name="day">Day</string>
    <string name="school_loop">School Loop</string>
    <string name="add_task">Add Task</string>
    <string name="add_activity">Add Activity</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="start_date">Start Date</string>
    <string name="due_date">Due Date</string>
    <string name="about_taskmate">About Taskmate</string>
    <string name="taskmate_is_an_app_to_help_students_from_grades_6_12_all_over_the_world_allocate_their_time_wisely_and_finish_their_assignments_on_time_while_preventing_stress_throughout_the_process_as_students_ourselves_we_know_just_how_stressful_planning_scheduling_attending_activities_and_completing_assignments_can_be_so_we_created_taskmate_to_help_students_like_us_live_a_better_healthier_and_stress_free_lifestyle">Taskmate is an app to help students from grades 6-12 all over the world allocate their time wisely and finish their assignments on time, while preventing stress throughout the process. As students ourselves, we know just how stressful planning, scheduling, attending activities, and completing assignments can be, so we created Taskmate to help students like us live a better, healthier, and stress-free lifestyle.</string>
    <string name="password_at_least_6_characters">Password (at least 6 characters)</string>
    <string name="privacy">Privacy</string>
    <string name="thank_you_for_using_taskmate_protecting_your_privacy_is_important_to_us_we_do_not_share_your_personal_information_with_other_apps_or_third_parties_it_is_only_for_this_app_once_you_enter_your_email_and_password_it_will_be_stored_only_on_this_device_and_no_one_else_will_be_able_to_view_it_the_app_needs_the_username_and_password_of_your_school_loop_account_to_pull_assignments_and_tests_to_create_an_automatic_schedule_we_can_not_see_or_share_your_school_loop_information_once_again_your_personal_information_is_safe_and_we_will_not_be_able_to_access_them">Thank you for using Taskmate! Protecting your privacy is important to us. We do not share your personal information with other apps or third parties, it is only for this app. Once you enter your email and password, it will be stored only on this device, and no one else will be able to view it. The app needs the username and password of your School Loop account to pull assignments and tests to create an automatic schedule. We can not see or share your School Loop information. Once again, your personal information is safe and we will not be able to access them.</string>
    <string name="when_would_you_like_me_to_schedule_events_on_weekends">When would you like me to schedule events on weekends?</string>
    <string name="_6_00_pm">6:00 PM</string>
    <string name="_1_00_pm">1:00 PM</string>

</resources>
