<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <Button
        android:id="@+id/idBtnAddToCalendar"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginBottom="76dp"
        android:onClick="addToCalendarClicked"
        android:text="@string/add_to_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idBtnCancel"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="cancelAddActivityClicked"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/idEvDesc"
        android:layout_width="225dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="17dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/event_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idActivityNote"
        android:layout_width="377dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/idBtnAddToCalendar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/event_duration_times"
        android:layout_width="133dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/idTvDuration"
        app:layout_constraintStart_toStartOf="@+id/idStartTime" />

    <Spinner
        android:id="@+id/event_frequency"
        android:layout_width="183dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/event_duration_times" />

    <Spinner
        android:id="@+id/idHomeworkHours"
        android:layout_width="104dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/idTxtHomeworkHours"
        app:layout_constraintStart_toStartOf="@+id/event_frequency" />

    <TextView
        android:id="@+id/idEventText"
        android:layout_width="101dp"
        android:layout_height="22dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/event_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/idEvDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginTop="76dp"
        android:text="@string/start_date"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/idEventText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idEventStartDate"
        android:layout_width="226dp"
        android:layout_height="31dp"
        android:gravity="bottom"
        android:onClick="startDateClicked"
        android:text="@string/start_date"
        android:textColor="#090101"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/idEvDesc" />

    <TextView
        android:id="@+id/idTvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/start_time"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/duration"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/idTvStartTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/repeats"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/idTvDuration"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idStartTime"
        android:layout_width="121dp"
        android:layout_height="35dp"
        android:gravity="bottom"
        android:onClick="startTimeClicked"
        android:text="@string/start_time"
        android:textColor="#0E0000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/idTvStartTime"
        app:layout_constraintStart_toStartOf="@+id/idEventStartDate" />

    <TextView
        android:id="@+id/idTxtHomeworkHours"
        android:layout_width="119dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/homework_hours"
        app:layout_constraintStart_toStartOf="@+id/idTxtSchoolTask"
        app:layout_constraintTop_toBottomOf="@+id/idTxtSchoolTask" />

    <TextView
        android:id="@+id/idTxtSchoolTask"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/school_task"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/idSubmissionDate"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:onClick="submissionDateClicked"
        android:text="@string/submission_date"
        app:layout_constraintBottom_toBottomOf="@+id/idTxtSubmitBy"
        app:layout_constraintStart_toStartOf="@+id/idHomeworkHours" />

    <TextView
        android:id="@+id/idTxtSubmitBy"
        android:layout_width="64dp"
        android:layout_height="26dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/submit_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtHomeworkHours" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/idSchoolTaskSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/idTxtSchoolTask"
        app:layout_constraintStart_toStartOf="@+id/event_frequency" />

</androidx.constraintlayout.widget.ConstraintLayout>